# summarize_dataframe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
summarize_dataframe/: summarize_df.py
tests/: test_summarize_dataframe.py
